Redux data added, currently working on Header.js data that ties in with Redux. Visibile bugs have been worked out and the app is visible

--- a/src/CSS Files/Header.css
+++ b/src/CSS Files/Header.css
@@ -37,6 +37,7 @@
     border-radius: 4px;
     border: 1px solid #f9f9f9;
     transition: all .2s ease 0s;
+    cursor: pointer;
 }
 
 .header-button:hover {
